# server-side-wasm

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
edge/: Cargo.toml
edge/src/: main.rs
gateway_module/: Cargo.toml  config.toml
gateway_module/src/: config.rs  lib.rs
host/: Cargo.toml  clippy.toml
host/src/: main.rs  wasm.rs
host/src/wasm/: gateway_module.rs  server_module.rs  telemetry_module.rs
modules/: Cargo.toml  config.toml
modules/gateway_module/: Cargo.toml  config.toml
modules/gateway_module/src/: config.rs  iot_config.rs  lib.rs
modules/server_module/: Cargo.toml  config.toml
modules/server_module/.cargo/: config
modules/server_module/src/: config.rs  iot_config.rs  lib.rs
modules/src/: lib.rs
modules/telemetry_module/: Cargo.toml  config.toml
modules/telemetry_module/src/: config.rs  lib.rs
server_module/: Cargo.toml  config.toml
server_module/src/: config.rs  lib.rs
telemetry_module/: Cargo.toml  config.toml
telemetry_module/src/: config.rs  lib.rs
wasi-experimental-http/: Cargo.toml  build.rs  config.toml
wasi-experimental-http/.devcontainer/: devcontainer.json
wasi-experimental-http/crates/wasi-experimental-http/: Cargo.toml
wasi-experimental-http/crates/wasi-experimental-http-wasmtime/: Cargo.toml
wasi-experimental-http/modules/iot_edge_module_simulated/: Cargo.toml
wasi-experimental-http/modules/iot_edge_module_simulated/src/: lib.rs
wasi-experimental-http/modules/rust/: Cargo.toml
wasi-experimental-http/modules/rust/src/: lib.rs
wasi-experimental-http/tests/rust/src/: lib.rs
wits/: hostfunctions.wit  hostobservability.wit  wasmgatewayfunctions.wit  wasmimports.wit  wasmserverfunctions.wit
