[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
# wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }
wasmtime-wasi = "0.35.3"
wasi-experimental-http-wasmtime = {git = "https://github.com/deislabs/wasi-experimental-http"}
clap = { version = "4.0.19", features = ["derive"] }
