[package]
name = "server_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
tokio = { version = "*", features = ["rt", "macros", "net", "io-util"] }
# tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master", features = ["rt", "macros", "net", "io-util"] }
toml = "*"
fs = "*"
anyhow = "*"
queues = "*"