[package]
name    = "iot_edge_module_simulated"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes                  = "1"
http                   = "0.2"
wasi-experimental-http = { path = "../../crates/wasi-experimental-http" }
libc                   = "*"
toml                   = "*"